--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@ tagline:
       <h1><a href="{{ BASE_PATH }}{{ post.url }}">{{ post.title }}</a></h1>
       <div class="date">{{ site.author.name }} 发表于 <span>{{ post.date | date:"%Y-%m-%d" }}</span></div>
     </header>
-    <div class="content">{{ content }}</div>
+    <div class="content">{{ post.description }}</div>
     </article>
   </section>
   {% endfor %}
