--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@ tagline:
       {% if post.description %}
       {{ post.description }}
       {% else %}
-      无描述
+      {{ post.title }}
       {% endif %}
     </div>
     </article>
